--- a/about.css
+++ b/about.css
@@ -2,10 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}g
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/muhammad123-legend/autosoe.git
-git push -u origin main
+}
+/* ==about-hero== */
+
+.about-con{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(165, 86, 86, 0.589);
+}
+
+.about{
+    background-image: url(b-blog_3.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100vh;
+}
