--- a/contact.css
+++ b/contact.css
@@ -4,6 +4,64 @@
     box-sizing: border-box;
     list-style: none;
 }
+/* ==media responsive== */
+@media (max-width:500px) {
+    .ull{
+        display: none;
+        position: absolute;
+        top: 70px;
+        right: 50px;
+    }
+    .icon{
+        display: block;
+        font-size: 14px;
+        color:#ffff;
+    }
+    header button{
+        display: none;
+    }
+    .contact-content{
+        max-width: 400px !important;
+    }  
+    .contact-hero{
+        flex-direction: column;
+        align-items: center !important;
+        text-align: center;
+        gap: 30px;
+        align-content: center;
+    } 
+    .location{
+        flex-direction: column;
+        gap: 20px;
+        text-align: center;
+    } 
+    .map{
+        max-width: 400px;
+        max-height: 400px !important;
+    }
+    .footer-content{
+        flex-direction: column;
+        gap: 20px;
+        /* align-self: center; */
+        padding: 0 !important;
+        text-align: center;
+        align-items: center !important;
+        justify-content: center !important;
+    }
+    .stock{
+        max-width: 400px !important;
+    }
+    .contact-content{
+        textarea{
+            background-color: lightgrey;
+            border-radius: 10px;
+        }
+        select{
+            background-color: lightgrey;
+            text-align: center;
+        }
+    }
+}
 /* ==header== */
 header{
     display: flex;
@@ -186,8 +244,12 @@ a{
 }
 .information{
     color: grey;
+    text-decoration: underline;
     font-size: 14px;
     font-variant: small-caps;
+}
+.information:hover{
+    text-decoration: underline;
 }
 /* ==location== */
 .location{
@@ -236,5 +298,113 @@ h1{
         height: 7vh;
         box-shadow: 0 0 30px red;
         color: #ffff;
+    }
+}
+/* == footer==*/
+footer{
+    background-color: rgb(73, 40, 40);
+    margin-top: 2rem;
+}
+.hh{
+    font-size: 20px;
+    font-variant: small-caps;
+    font-weight: 900;
+    color: #ffff;
+}
+.stock{
+    color: #ffff;
+    max-width: 250px;
+    font-size: 16px;
+    text-shadow: 0 0 10px white;
+}
+.footer-con{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-size: 14px;
+    color: #ffff;
+}
+.connect{
+    color: #ffff;
+    font-size: 12px;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    /* padding: 20px; */
+}
+.app{
+    width: 2rem;
+    height: 5vh;
+    text-align: center;
+    background-color: black;
+    border-radius: 100px;
+    align-content: center;
+    img{
+        width: 1rem;
+        min-height: 2vh;
+        /* padding-left: 1rem; */
+    }
+}
+.footer-content-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.footer-content-div1{
+    display: flex;
+    flex-direction: column;
+    padding: 20px 20px;
+    gap: 20px;
+
+}
+.toll{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    color: #ffff;
+    font-size: 12px;
+}
+.live{
+    display: flex;
+    color: #ffff;
+    font-size: 12px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    buttton{
+        background-color: rgb(233, 39, 39);
+        width: 5rem;
+        height: 5vh;
+        border-radius: 10px;
+    }
+}
+.business{
+    display: flex;
+    color: #ffff;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+.email{
+    color:#ffff;
+    display: flex;
+    gap: 10px;align-items: center;
+    justify-content: center;
+}
+.cnnt1{
+    div{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: center;
     }
 }
