--- a/style.css
+++ b/style.css
@@ -180,6 +180,11 @@
     .stock{
         max-width: 400px !important;
     }
+    .cnnt1{
+        div{
+            justify-content: center !important;
+        }
+    }
 }
 
 /* ==header== */
@@ -731,10 +736,11 @@ header button{
     height: 65vh;
    } 
 }
-/* ==foter== */
+/* ==footer== */
 footer{
     background-color: rgb(73, 40, 40);
     margin-top: 2rem;
+    padding: 20px 0;
 }
 .hh{
     font-size: 20px;
@@ -755,6 +761,7 @@ footer{
     justify-content: center;
     gap: 20px;
     font-size: 14px;
+    padding: 20px 0;
     color: #ffff;
 }
 .connect{
@@ -765,7 +772,7 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: baseline;
-    /* padding: 20px; */
+    padding: 20px;
 }
 .app{
     width: 2rem;
@@ -831,10 +838,13 @@ footer{
     justify-content: center;
 }
 .cnnt1{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     div{
         display: flex;
         gap: 10px;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
     }
 }
