--- a/about.css
+++ b/about.css
@@ -2,17 +2,73 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
+/* == Header== */
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 1rem;
+    background-color: rgba(248, 50, 50, 0.342);
+    height: 10vh;
+    padding-right: 3%;
+    padding-left: 4%;
+    width: 100%;
+}
+ul{
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+li{
+    text-decoration: none;
+    font-weight: bold;
+    color: #ffff;
+}
+a:hover{
+    color: grey;
+}
+header input{
+    display: none;
+}
+.icon{
+    display: none;
+}
+#check:checked ~ ul{
+    display: block;
+}
+#check:checked ~ header button{
+    display: block;
+}
+header button{
+    background-color: lightcoral;
+    height: 5vh;
+    width: 5rem;
+    border: none;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
 }
 /* ==about-hero== */
 
 .about-con{
     width: 100%;
     height: 100vh;
-    background-color: rgba(165, 86, 86, 0.589);
+    align-content: center;
+    background-color: rgba(180, 102, 102, 0.507);
 }
-
+p{
+    text-align: center;
+    font-size: 5vh;
+    font-weight: bold;
+    color: #fff;
+    max-width: fit-content;
+}
 .about{
-    background-image: url(b-blog_3.jpg);
+    background-image: url(b-blog_3.jpg);  
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
