--- a/shop.css
+++ b/shop.css
@@ -2,4 +2,502 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
+@media (max-width:400px) {
+    .ull{
+        display: none;
+        position: absolute;
+        top: 70px;
+        right: 50px;
+    }
+    .icon{
+        display: block;
+        font-size: 14px;
+        color:#ffff;
+    }
+    header button{
+        display: none;
+    }
+    li{
+        display: inline-flex;
+        font-size: 14px;
+    }
+    header{
+        margin: 0;
+    }
+    .special-offer-con1{
+        flex-direction: column;
+        padding: 18px 0;
+    }
+    .special-offer-con12{
+        flex-direction: column;
+        padding: 18px;
+    }
+    .special-offer-con13{
+        flex-direction: column;
+        padding: 18px;
+    }
+    .product-list{
+        flex-direction: column;
+    }
+    .product-list-con1{
+        transition: transform 3s;
+        padding: 20px 0;
+    }
+    .product-list-con2{
+        transition: transform 3s;
+    }
+    .product-list:hover .product-list-con1{
+    transform: translateX(0px) !important;
+    transform: translateY(480px) !important;
+}
+.product-list:hover .product-list-con2{
+    transform: translateX(-0px) !important;
+    transform: translateY(-480px) !important;
+}
+.high-sales{
+    flex-direction: column;
+}
+.categories{
+    flex-direction: column;
+    gap: 10px;
+}
+button{
+    align-self: center;
+}
+.footer-content{
+        flex-direction: column;
+        gap: 20px;
+        /* align-self: center; */
+        padding: 0 !important;
+        text-align: center;
+        align-items: center !important;
+        justify-content: center !important;
+    }
+    .stock{
+        max-width: 400px !important;
+    }
+    .connection-link{
+        div{
+            justify-content: center !important;
+        }
+    }
+}
+/* ==header=== */
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 1rem;
+    background: linear-gradient(to right, rgba(245, 25, 25, 0.678), rgba(255, 70, 70, 0.603));
+    height: 10vh;
+    padding-right: 3%;
+    padding-left: 4%;
+    width: 100%;
+}
+ul{
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+}
+li{
+    text-decoration: none;
+    font-weight: bold;
+    color: #ffff;
+}
+li:hover{
+    color: black;
+}
+header input{
+    display: none;
+}
+.icon{
+    display: none;
+    color: #ffff;
+}
+#check:checked ~ ul{
+    display: block;
+}
+#check:checked ~ header button{
+    display: block;
+}
+header button{
+    background-color: lightcoral;
+    height: 5vh;
+    width: 5rem;
+    border: none;
+    border-radius: 30px;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+}
+/* ==hero-product== */  
+/* product selection == */
+.categories{
+    display: flex;
+    align-items:center;
+    margin: 2%;
+    justify-content: space-around;
+    p{
+        color: lightslategray;
+        font-size: 16px;
+    }
+}
+.categories-con{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    p:first-of-type{
+        font-size: 4vh;
+        font-weight: 900;
+        max-width: 600px;
+        color: rgba(245, 25, 25, 0.678);
+        font-variant: small-caps;
+    }
+}
+.product-selection-con2{
+    background-color: lavender;
+    padding: 1rem;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.product-selection-con2{
+    background-color: lavender;
+    padding: 1rem;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+.product-list img{
+    width: 7rem;
+    height: 15vh;
+}
+.product-rate img{
+    width: 6rem;
+    height: 4vh;
+}
+.product-rate p:first-of-type{
+    text-transform: capitalize;
+    font-size: 14px;
+    max-width: 250px;
+    font-weight: 600;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.product-rate p:last-of-type{
+    color: rgb(219, 54, 54);
+    font-size: 14px;
+    font-weight: 600;
+}
+.product-rate{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.product-list1{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #ffff;
+    gap: 2rem;
+    padding: 1rem;
+    border-radius: 10px;
+}
+.product-list{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    align-items: center;
+}
+.product-list:hover .product-list-con1{
+    transform: translateX(450px);
+}
+.product-list:hover .product-list-con2{
+    transform: translateX(-450px);
+}
+.product-list-con1{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    transition: transform 3s;
+}
+.product-list-con2{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    transition: transform 3s;
+}
+/* ==offer== */
+.special-offer-con1-items1{
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    p:first-child{
+        color: #ffff;
+        font-weight: bold;
+    }
+    p:nth-of-type(2){
+        font-size: 6vh;
+        font-weight: 900;
+        max-width: 600px;
+        color: rgb(219, 54, 54);
+        font-variant: small-caps;
+    }
+    p:nth-of-type(3){
+        font-size: 6vh;
+        font-weight: 900;
+        max-width: 400px;
+        color: #ffff;
+        font-variant: small-caps;
+    }
+    button{
+        width: 9rem;
+        background-color: rgb(219, 54, 54);
+        height: 7vh;
+        border-radius: 50px;
+        box-shadow: 0 0 30px;
+        border-color: #ffff;
+        color: #ffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 1rem;
+            height: 3vh;
+        }
+    }
+}
+.special-offer-con1{
+    background-color: rgba(245, 25, 25, 0.678);
+    display: flex;
+    padding: 2rem 3rem;
+    /* height: 50vh; */
+    align-items: center;
+    border-radius: 15px;
+    img{
+        width: 15rem;
+        height: 30vh;
+    }
+}
+.high-sales{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 20px;
+    margin: 5%;
+}
+.special-offer-con12{
+     background-color: rgb(121, 91, 91);
+    display: flex;
+    padding: 2rem 3rem;
+    /* height: 50vh; */
+    align-items: center;
+    border-radius: 15px;
+    img{
+        width: 15rem;
+        height: 30vh;
+    }
+}
+.special-offer-con13{
+     background-color: rgb(94, 52, 52);
+    display: flex;
+    padding: 2rem 3rem;
+    /* height: 50vh; */
+    align-items: center;
+    border-radius: 15px;
+    img{
+        width: 15rem;
+        height: 30vh;
+    }
+}
+.special-offer-con1-items12{
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    p:first-child{
+        color: #ffff;
+        font-weight: bold;
+    }
+    p:nth-of-type(2){
+        font-size: 6vh;
+        font-weight: 900;
+        max-width: 600px;
+        color: rgb(219, 54, 54);
+        font-variant: small-caps;
+    }
+    p:nth-of-type(3){
+        font-size: 6vh;
+        font-weight: 900;
+        max-width: 400px;
+        color: #ffff;
+        font-variant: small-caps;
+    }
+    button{
+        width: 9rem;
+        background-color: rgb(219, 54, 54);
+        height: 7vh;
+        border-radius: 50px;
+        box-shadow: 0 0 30px;
+        border-color: #ffff;
+        color: #ffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 1rem;
+            height: 3vh;
+        }
+    }
+}
+.special-offer-con1-items13{
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    p:first-child{
+        color: #ffff;
+        font-weight: bold;
+    }
+    p:nth-of-type(2){
+        font-size: 6vh;
+        font-weight: 900;
+        max-width: 600px;
+        color: rgb(219, 54, 54);
+        font-variant: small-caps;
+    }
+    p:nth-of-type(3){
+        font-size: 6vh;
+        font-weight: 900;
+        max-width: 400px;
+        color: #ffff;
+        font-variant: small-caps;
+    }
+    button{
+        width: 9rem;
+        background-color: rgb(219, 54, 54);
+        height: 7vh;
+        border-radius: 50px;
+        box-shadow: 0 0 30px;
+        border-color: #ffff;
+        color: #ffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img{
+            width: 1rem;
+            height: 3vh;
+        }
+    }
+}
+/* == footer== */
+footer{
+    background-color: rgb(73, 40, 40);
+    margin-top: 2rem;
+    padding: 20px 0;
+    font-size: 14px;
+}
+.hh{
+    font-size: 20px;
+    font-variant: small-caps;
+    font-weight: 900;
+    color: #ffff;
+}
+.stock{
+    color: #ffff;
+    max-width: 250px;
+    font-size: 16px;
+    text-shadow: 0 0 10px white;
+}
+.footer-con{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    font-size: 14px;
+    padding: 20px 0;
+    color: #ffff;
+}
+.connect{
+    color: #ffff;
+    font-size: 12px;
+}
+.footer-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 20px;
+}
+.app{
+    width: 2rem;
+    height: 5vh;
+    text-align: center;
+    background-color: black;
+    border-radius: 100px;
+    align-content: center;
+    img{
+        width: 1rem;
+        min-height: 2vh;
+        /* padding-left: 1rem; */
+    }
+}
+.footer-content-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20PX;
+}
+.footer-content-div1{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+.toll{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    color: #ffff;
+    font-size: 12px;
+}
+.live{
+    display: flex;
+    color: #ffff;
+    font-size: 12px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    buttton{
+        background-color: rgb(233, 39, 39);
+        width: 5rem;
+        height: 5vh;
+        border-radius: 10px;
+    }
+}
+.business{
+    display: flex;
+    color: #ffff;
+    flex-direction: column;
+    font-size: 12px;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+.email{
+    color:#ffff;
+    display: flex;
+    gap: 10px;align-items: center;
+    justify-content: center;
+}
+.connection-link{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    div{
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: flex-start;
+    }
 }
