--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
     text-decoration: none;
 }
 @media (max-width:500px) {
+    body{
+        width:100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
     .ull{
         display: none;
         position: absolute;
@@ -49,12 +55,13 @@
     .special-offer{
         flex-direction: column;
         text-align: center;
-        padding: 0 18px;
+        justify-content: center;
+        /* padding: 0 18px; */
         gap: 20px;
     }
     .special-offer-con1{
         flex-direction: column;
-        padding: 18px 0;
+        padding: 18px;
     }
     .special-offer-con2-items1{
         flex-direction: column;
@@ -121,10 +128,13 @@
     flex-direction: column;
     gap: 10px;
 }
+.product-selection-con1{
+    max-width: 320px;
+}
 .service-provide-con{
         img{
-            width: 7rem !important;
-            height: 20vh !important;
+            width: 5rem !important;
+            height: 15vh !important;
         }
         .sp{
             font-size: 20px !important;
@@ -180,7 +190,7 @@
     .stock{
         max-width: 400px !important;
     }
-    .cnnt1{
+    .connection-link{
         div{
             justify-content: center !important;
         }
@@ -304,7 +314,7 @@ header button{
 .special-offer-con1{
     background-color: rgba(245, 25, 25, 0.678);
     display: flex;
-    padding: 0 3rem 0 2rem;
+    padding: 20px;
     /* height: 50vh; */
     align-items: center;
     border-radius: 15px;
@@ -469,7 +479,7 @@ header button{
 .categories{
     display: flex;
     align-items:center;
-    margin: 2%;
+    /* margin: 2%; */
     justify-content: space-around;
     p{
         color: lightslategray;
@@ -837,7 +847,7 @@ footer{
     gap: 10px;align-items: center;
     justify-content: center;
 }
-.cnnt1{
+.connection-link{
     display: flex;
     flex-direction: column;
     gap: 1rem;
